--- a/bibliography.bib
+++ b/bibliography.bib
@@ -16,22 +16,14 @@ year = {2007}
 }
 
 @article{Ghodsi2011,
-doi = {10.1186/1471-2105-12-271},
-file = {::},
-isbn = {10.1186/1471-2105-12-271},
-issn = {1471-2105},
-journal = {BMC bioinformatics},
-keywords = {Algorithms,Cluster Analysis,Genetic Markers,Phylogeny,Sequence Alignment,Sequence Analysis, DNA,Software},
-language = {en},
-month = {jan},
-number = {1},
-pages = {271},
-pmid = {21718538},
-publisher = {BioMed Central Ltd},
-title = {{DNACLUST: accurate and efficient clustering of phylogenetic marker genes.}},
-url = {http://www.biomedcentral.com/1471-2105/12/271},
-volume = {12},
-year = {2011}
+  title={DNACLUST: accurate and efficient clustering of phylogenetic marker genes},
+  author={Ghodsi, Mohammadreza and Liu, Bo and Pop, Mihai},
+  journal={BMC bioinformatics},
+  volume={12},
+  number={1},
+  pages={271},
+  year={2011},
+  publisher={BioMed Central Ltd}
 }
 
 @article{Nawrocki2013,
@@ -116,7 +108,7 @@ year = {2012}
   publisher={Oxford Univ Press}
 }
 
-@article{pei2010diversity,
+@article{Pei2010,
   title={Diversity of 16S rRNA genes within individual prokaryotic genomes},
   author={Pei, Anna Y and Oberdorf, William E and Nossa, Carlos W and Agarwal, Ankush and Chokshi, Pooja and Gerz, Erika A and Jin, Zhida and Lee, Peng and Yang, Liying and Poles, Michael and others},
   journal={Applied and environmental microbiology},
