--- a/multicopy_taxa_report.Rmd
+++ b/multicopy_taxa_report.Rmd
@@ -190,26 +190,38 @@ Ambiguous clusters, clusters with more than one genome assigned
 ```{r echo=FALSE, warning=FALSE, message=FALSE}
 cluster_df_ambig <- cluster_copy_number %>% group_by(threshold, gi) %>% 
     summarise(n_assigned = n()) %>% 
-    mutate(ambig = ifelse(n_assigned > 1, "> 1","1"))
-```
+    mutate(ambig = ifelse(n_assigned > 1, "> 1","1")) %>% 
+    mutate(assigned_prop = )
+cluster_df_ambig_prop <- cluster_df_ambig %>% 
+    group_by(threshold, n_assigned) %>% summarise(count = n()) %>%
+    group_by(threshold) %>% mutate(prop_n_assigned = count/sum(count), 
+                                   check = sum(prop_n_assigned))
+#    filter(threshold %in% c("0.70", "0.85", "0.91", "0.94", "0.97", "0.99"))
 
-Proportion of genomes with 16S rRNA gene copies assigned to more than one cluster.
-```{r}
-cluster_df_ambig %>% 
-    ggplot() +
-        geom_bar(aes(x = threshold, fill = ambig)) + theme_bw() + 
-        labs(x = "Clustering Threshold", y = "Number of Genomes", fill = "Assigned Clusters") +
-    theme(legend.position = "bottom", legend.direction = "horizontal")
 ```
 
 Number of clusters assigned, for genomes with more than one assigned gene copy.
-```{r}
-cluster_df_ambig %>% filter(n_assigned > 1, threshold != "1.00") %>% 
+```{r echo=FALSE}
+cluster_df_ambig_subset %>% 
     ggplot() + 
-        geom_bar(aes(x = threshold, fill = factor(n_assigned))) + 
+        geom_point(aes(x = threshold, y = count, color = factor(n_assigned), 
+                       fill = factor(n_assigned)), 
+                   position = position_jitterdodge()) + 
         theme_bw() + labs(x = "Clustering Threshold", 
                           y = "Number of Genomes", 
-                          fill = "Number of Assigned Clusters")
+                          color = "Number of Assigned Clusters") +
+        scale_fill_discrete(guide = "none") +
+        scale_y_log10(breaks = c(1, 5, 10, 50, 100, 500, 1000, 3000)) +
+        theme(legend.position = "bottom")
+
+cluster_df_ambig_prop %>% 
+    ggplot() + geom_point(aes(x = as.numeric(threshold), 
+                              y = prop_n_assigned, color = as.factor(n_assigned))) +
+    geom_line(aes(x = as.numeric(threshold), y = prop_n_assigned, color = n_assigned)) +
+    scale_x_continuous(breaks = thresholds, 
+                       labels = thresholds) +
+    theme_bw() + labs(x = "Cluster Threshold", y = "Proportion of Clusters", color = "Taxonomic Level") +
+    geom_hline(aes(yintercept = 0.05), linetype = 2, color = "grey40") + theme(legend.position = "bottom")
 ```
 
 Taxonomic breakdown of clusters
@@ -247,52 +259,8 @@ cluster_df_anno_count %>% group_by(threshold, taxa_level, ambig) %>%
 
 Combination of copy number and taxonomic ambiguity
 ```{r}
-# ## Taxa ambiguous clusters assigned a value of 1 and non-ambiguous a value of 0
-# cluster_taxa_ambig <- cluster_df_anno_count %>% 
-#     group_by(threshold, taxa_level, ambig) %>% 
-#     summarise(n_taxa = n()) %>% mutate(taxa_ambig = ifelse(n_taxa > 1, 1,0))
-# 
-# ## Copy number ambiguous clusters assigned a value of 2 and non-ambiguous a value of 0
-# cluster_copy_ambig <- cluster_copy_number %>% group_by(threshold, gi) %>% 
-#     summarise(n_copy = n()) %>% 
-#     mutate(copy_ambig = ifelse(n_copy > 1, 2,0))
-# 
-# ## Cluster ambiguous for both ambig value of 3
-# cluster_ambig <- full_join(cluster_taxa_ambig, cluster_copy_ambig) %>% 
-#     rowwise() %>% mutate(ambig = copy_ambig + taxa_ambig)
-```
 
-```{r}
-# cluster_ambig %>% group_by(threshold, taxa_level, ambig) %>% summarise(ambig_count = n()) %>% group_by(threshold,taxa_level,ambig) %>% mutate(ambig_prop = ambig_count/sum(ambig_count)) %>% 
-#     filter(threshold != "1.00", 
-#                !(taxa_level %in% c("gi","taxid")),
-#                ambig == "multiple") %>% 
-#     ggplot() + geom_point(aes(x = as.numeric(threshold), y = ambig_prop, color = taxa_level)) +
-#     geom_line(aes(x = as.numeric(threshold), y = ambig_prop, color = taxa_level)) +
-#     scale_x_continuous(breaks = thresholds, 
-#                        labels = thresholds) +
-#     theme_bw() + labs(x = "Cluster Threshold", y = "Proportion of Clusters", color = "Taxonomic Level") +
-#     geom_hline(aes(yintercept = 0.05), linetype = 2, color = "grey40") + theme(legend.position = "bottom")
 ```
-
-Want to try and generate a similar figure showing both clusters with both copy number ambiguity and taxonomic ambiguity.
-```{r}
-# cluster_taxa <- taxaID %>% 
-#     separate(cluster, c("clus","threshold","id"),"_") %>% 
-#     select(-clus, -seq_names) %>% left_join(cluster_copy_number)
-# cluster_taxa_copy_ambig <- cluster_taxa %>% group_by(threshold, id) %>% 
-#     mutate(unique_copy_num = count %>% length() %>% unique(),
-#            ambig_copy = ifelse(unique_copy_num > 1, 2,0))
-# cluster_taxa_copy_both_ambig <- cluster_taxa_copy_ambig %>% 
-#     gather(taxa_level, taxa, -threshold, -id, -seqs, -unique_copy_num, -ambig_copy, -count) %>%  
-#     group_by(threshold, id, taxa_level) %>% 
-#     mutate(taxa_count = length(unique(taxa))) %>% 
-#     mutate(ambig_taxa = ifelse(taxa_count > 1, 1,0))
-# cluster_taxa_copy_both_ambig %>% group_by(threshold, id, count, taxa_level, ambig_copy, ambig_taxa) %>% 
-#     summarise(ambig = n(), ambig_type = list(ambig_copy + ambig_taxa), ambig_length = length(ambig_type))
-# #ambig_copy + ambig_taxa) %>% group_by(threshold, taxa_level, ambig) %>% summarise(count = n()) %>% group_by(threshold, taxa_level) %>% mutate(prop = count/sum(count))
-```
-
 
 Phylogenetic tree - showing relationship between clusters and taxa assignments
 
