flushing out report

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -118,3 +118,180 @@ year = {2012}
   year={2010},
   publisher={Am Soc Microbiol}
 }
+
+@article{Stoddard2014,
+  title={rrnDB: improved tools for interpreting rRNA gene abundance in bacteria and archaea and a new foundation for future development},
+  author={Stoddard, Steven F and Smith, Byron J and Hein, Robert and Roller, Benjamin RK and Schmidt, Thomas M},
+  journal={Nucleic acids research},
+  pages={gku1201},
+  year={2014},
+  publisher={Oxford Univ Press}
+}
+
+@article{Angly2014,
+  title={CopyRighter: a rapid tool for improving the accuracy of microbial community profiles through lineage-specific gene copy number correction},
+  author={Angly, Florent E and Dennis, Paul G and Skarshewski, Adam and Vanwonterghem, Inka and Hugenholtz, Philip and Tyson, Gene W},
+  journal={Microbiome},
+  volume={2},
+  number={1},
+  pages={1--13},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{Perisin2015,
+  title={16Stimator: statistical estimation of ribosomal gene copy numbers from draft genome assemblies},
+  author={Perisin, Matthew and Vetter, Madlen and Gilbert, Jack A and Bergelson, Joy},
+  journal={The ISME Journal},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{Vetrovsky2013,
+  title={The variability of the 16S rRNA gene in bacterial genomes and its consequences for bacterial community analyses},
+  author={V{\v{e}}trovsk{\`y}, Tom{\'a}{\v{s}} and Baldrian, Petr},
+  journal={PLoS One},
+  volume={8},
+  number={2},
+  pages={e57923},
+  year={2013}
+}
+
+
+@article{Pruitt2012,
+  title={NCBI Reference Sequences (RefSeq): current status, new features and genome annotation policy},
+  author={Pruitt, Kim D and Tatusova, Tatiana and Brown, Garth R and Maglott, Donna R},
+  journal={Nucleic acids research},
+  volume={40},
+  number={D1},
+  pages={D130--D135},
+  year={2012},
+  publisher={Oxford Univ Press}
+}
+
+
+@Manual{,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2015},
+  url = {https://www.R-project.org/},
+}
+@Manual{,
+  title = {magrittr: A Forward-Pipe Operator for R},
+  author = {Stefan Milton Bache and Hadley Wickham},
+  year = {2014},
+  note = {R package version 1.5},
+  url = {http://CRAN.R-project.org/package=magrittr},
+}
+
+@Manual{,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  note = {R package version 1.0.0.9000},
+  url = {https://github.com/hadley/stringr},
+}
+
+@Manual{,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain Francois},
+  year = {2015},
+  note = {R package version 0.4.3},
+  url = {http://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{,
+  title = {tidyr: Easily Tidy Data with `spread()` and `gather()` Functions},
+  author = {Hadley Wickham},
+  note = {R package version 0.3.1.9000},
+  url = {https://github.com/hadley/tidyr},
+}
+
+@Manual{,
+  title = {purrr: Functional Programming Tools},
+  author = {Hadley Wickham},
+  note = {R package version 0.1.0.9000},
+  url = {https://github.com/hadley/purrr},
+}
+
+@Manual{,
+  title = {readr: Read Tabular Data},
+  author = {Hadley Wickham and Romain Francois},
+  year = {2015},
+  note = {R package version 0.2.2},
+  url = {http://CRAN.R-project.org/package=readr},
+}
+
+@Book{,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2009},
+  isbn = {978-0-387-98140-6},
+  url = {http://had.co.nz/ggplot2/book},
+}
+
+@Manual{,
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  author = {Yihui Xie},
+  year = {2015},
+  note = {R package version 1.11},
+  url = {http://yihui.name/knitr/},
+}
+
+@Book{,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {http://yihui.name/knitr/},
+}
+
+@InCollection{,
+  booktitle = {Implementing Reproducible Computational Research},
+  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2014},
+  note = {ISBN 978-1466561595},
+  url = {http://www.crcpress.com/product/isbn/9781466561595},
+}
+
+@Article{,
+  title = {A{PE}: analyses of phylogenetics and evolution in {R} language},
+  author = {E. Paradis and J. Claude and K. Strimmer},
+  journal = {Bioinformatics},
+  year = {2004},
+  volume = {20},
+  pages = {289-290},
+}
+
+@Article{,
+  title = {ggtree: an R package for visualization and annotation of phylogenetic tree with different types of meta-data},
+  author = {Guangchuang Yu and David Smith and Huachen Zhu and Yi Guan and Tommy Tsan-Yuk Lam},
+  year = {submitted},
+  journal = {Methods in Ecology and Evolution},
+}
+
+@Manual{,
+  title = {{colorspace}: Color Space Manipulation},
+  author = {Ross Ihaka and Paul Murrell and Kurt Hornik and Jason C. Fisher and Achim Zeileis},
+  year = {2015},
+  note = {R package version 1.2-6},
+  url = {http://CRAN.R-project.org/package=colorspace},
+}
+
+@Article{,
+  title = {Escaping {RGB}land: Selecting Colors for Statistical Graphics},
+  author = {Achim Zeileis and Kurt Hornik and Paul Murrell},
+  journal = {Computational Statistics \& Data Analysis},
+  year = {2009},
+  volume = {53},
+  pages = {3259--3270},
+  doi = {10.1016/j.csda.2008.11.033},
+}
